<resources>
    <string name="app_name">Power Words Reader</string>
    <string name="progress_log">Progress Log</string>
    <string name="comfortable">comfortable</string>
    <string name="microphone_button">microphone button</string>
    <string name="help_button">help button</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous button</string>
    <string name="try_again">Try again!</string>
    <string name="correct">Correct!</string>
    <string name="listening">Listening…</string>
    <string name="voice_recognition_not_available">Voice Recognition Not Available</string>
    <string name="accuracy">Accuracy</string>
    <string name="date">Date</string>
    <string name="level">Level</string>
    <string-array name="irla_levels">
        <item>1G Power Words</item>
        <item>2G Power Words</item>
        <item>1B Power Words</item>
        <item>2B Power Words</item>
        <item>1R Power Words</item>
        <item>2R Power Words</item>
        <item>Wt Power Words</item>
    </string-array>
    <string-array name="irla_levels_abbrev">
        <item>1G</item>
        <item>2G</item>
        <item>1B</item>
        <item>2B</item>
        <item>1R</item>
        <item>2R</item>
        <item>Wt</item>
    </string-array>
    <string-array name="power_words_1g">
        <item>a</item>
        <item>all</item>
        <item>am</item>
        <item>an</item>
        <item>and</item>
        <item>are</item>
        <item>at</item>
        <item>be</item>
        <item>big</item>
        <item>can</item>
        <item>can\'t</item>
        <item>come</item>
        <item>do</item>
        <item>down</item>
        <item>for</item>
        <item>get</item>
        <item>go</item>
        <item>had</item>
        <item>has</item>
        <item>have</item>
        <item>he</item>
        <item>here</item>
        <item>I</item>
        <item>in</item>
        <item>is</item>
        <item>it</item>
        <item>like</item>
        <item>little</item>
        <item>live</item>
        <item>look</item>
        <item>lots</item>
        <item>love</item>
        <item>me</item>
        <item>my</item>
        <item>no</item>
        <item>of</item>
        <item>on</item>
        <item>one</item>
        <item>said</item>
        <item>see</item>
        <item>she</item>
        <item>that</item>
        <item>the</item>
        <item>there</item>
        <item>they</item>
        <item>this</item>
        <item>to</item>
        <item>up</item>
        <item>want</item>
        <item>was</item>
        <item>we</item>
        <item>went</item>
        <item>what</item>
        <item>where</item>
        <item>who</item>
        <item>why</item>
        <item>will</item>
        <item>with</item>
        <item>yes</item>
        <item>you</item>
    </string-array>
    <string-array name="power_words_2g">
        <item>about</item>
        <item>animal</item>
        <item>as</item>
        <item>beside</item>
        <item>boy</item>
        <item>but</item>
        <item>by</item>
        <item>came</item>
        <item>could</item>
        <item>day</item>
        <item>did</item>
        <item>does</item>
        <item>eat</item>
        <item>from</item>
        <item>fun</item>
        <item>gave</item>
        <item>girl</item>
        <item>give</item>
        <item>goes</item>
        <item>going</item>
        <item>good</item>
        <item>got</item>
        <item>happy</item>
        <item>her</item>
        <item>him</item>
        <item>his</item>
        <item>home</item>
        <item>house</item>
        <item>how</item>
        <item>if</item>
        <item>into</item>
        <item>jump</item>
        <item>make</item>
        <item>many</item>
        <item>new</item>
        <item>not</item>
        <item>now</item>
        <item>off</item>
        <item>oh</item>
        <item>or</item>
        <item>our</item>
        <item>out</item>
        <item>over</item>
        <item>play</item>
        <item>put</item>
        <item>ran</item>
        <item>saw</item>
        <item>says</item>
        <item>some</item>
        <item>stop</item>
        <item>take</item>
        <item>them</item>
        <item>then</item>
        <item>these</item>
        <item>too</item>
        <item>under</item>
        <item>were</item>
        <item>when</item>
        <item>would</item>
        <item>your</item>
    </string-array>
    <string-array name="power_words_1b">
        <item>after</item>
        <item>again</item>
        <item>always</item>
        <item>another</item>
        <item>any</item>
        <item>away</item>
        <item>beautiful</item>
        <item>because</item>
        <item>become</item>
        <item>before</item>
        <item>begin</item>
        <item>birthday</item>
        <item>both</item>
        <item>bright</item>
        <item>buy</item>
        <item>catch</item>
        <item>color</item>
        <item>count</item>
        <item>every</item>
        <item>fight</item>
        <item>find</item>
        <item>first</item>
        <item>found</item>
        <item>friend</item>
        <item>full</item>
        <item>funny</item>
        <item>hello</item>
        <item>help</item>
        <item>know</item>
        <item>laugh</item>
        <item>light</item>
        <item>long</item>
        <item>might</item>
        <item>much</item>
        <item>myself</item>
        <item>never</item>
        <item>night</item>
        <item>old</item>
        <item>only</item>
        <item>other</item>
        <item>own</item>
        <item>party</item>
        <item>people</item>
        <item>please</item>
        <item>pretty</item>
        <item>pull</item>
        <item>read</item>
        <item>right</item>
        <item>school</item>
        <item>something</item>
        <item>surprise</item>
        <item>their</item>
        <item>those</item>
        <item>today</item>
        <item>very</item>
        <item>walk</item>
        <item>which</item>
        <item>whose</item>
        <item>word</item>
        <item>work</item>
        <item>write</item>
    </string-array>
    <string-array name="power_words_2b">
        <item>also</item>
        <item>ask</item>
        <item>beautiful</item>
        <item>before</item>
        <item>began</item>
        <item>begin</item>
        <item>behind</item>
        <item>being</item>
        <item>best</item>
        <item>body</item>
        <item>bought</item>
        <item>build</item>
        <item>carry</item>
        <item>caught</item>
        <item>cent</item>
        <item>child</item>
        <item>children</item>
        <item>dollar</item>
        <item>earth</item>
        <item>enough</item>
        <item>eye</item>
        <item>friendly</item>
        <item>gone</item>
        <item>group</item>
        <item>guess</item>
        <item>half</item>
        <item>heard</item>
        <item>high</item>
        <item>hurry</item>
        <item>key</item>
        <item>large</item>
        <item>later</item>
        <item>learn</item>
        <item>leave</item>
        <item>left</item>
        <item>life</item>
        <item>listen</item>
        <item>lost</item>
        <item>money</item>
        <item>most</item>
        <item>next</item>
        <item>noise</item>
        <item>nothing</item>
        <item>often</item>
        <item>once</item>
        <item>open</item>
        <item>page</item>
        <item>phone</item>
        <item>picture</item>
        <item>push</item>
        <item>quiet</item>
        <item>quit</item>
        <item>quite</item>
        <item>ready</item>
        <item>really</item>
        <item>sentence</item>
        <item>spring</item>
        <item>story</item>
        <item>sure</item>
        <item>teacher</item>
        <item>thought</item>
        <item>tiny</item>
        <item>together</item>
        <item>tomorrow</item>
        <item>trouble</item>
        <item>turn</item>
        <item>until</item>
        <item>upon</item>
        <item>watch</item>
        <item>weather</item>
        <item>while</item>
        <item>whose</item>
        <item>woman</item>
        <item>world</item>
        <item>young</item>
    </string-array>
    <string-array name="power_words_1r">
        <item>answer</item>
        <item>been</item>
        <item>believe</item>
        <item>bicycle</item>
        <item>board</item>
        <item>bottom</item>
        <item>bread</item>
        <item>building</item>
        <item>city</item>
        <item>climb</item>
        <item>clothes</item>
        <item>clothing</item>
        <item>country</item>
        <item>done</item>
        <item>Dr.</item>
        <item>early</item>
        <item>even</item>
        <item>field</item>
        <item>floor</item>
        <item>front</item>
        <item>giant</item>
        <item>heavy</item>
        <item>hour</item>
        <item>idea</item>
        <item>knew</item>
        <item>knock</item>
        <item>library</item>
        <item>machine</item>
        <item>magic</item>
        <item>million</item>
        <item>minute</item>
        <item>moon</item>
        <item>mountain</item>
        <item>move</item>
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>o\'clock</item>
        <item>piece</item>
        <item>pond</item>
        <item>poor</item>
        <item>quarter</item>
        <item>question</item>
        <item>second</item>
        <item>secret</item>
        <item>shall</item>
        <item>sign</item>
        <item>soon</item>
        <item>sorry</item>
        <item>special</item>
        <item>stomach</item>
        <item>stood</item>
        <item>straight</item>
        <item>tough</item>
        <item>warm</item>
        <item>weigh</item>
        <item>whisper</item>
        <item>whistle</item>
        <item>wild</item>
        <item>wind</item>
    </string-array>
</resources>